--- a/ogu/lectures/mat_an/l1.md
+++ b/ogu/lectures/mat_an/l1.md
@@ -210,3 +210,363 @@ $X \equiv N
 ## Понятие числовой последовательности и её предела
 
 Числовую последовательность можно рассматривать как вид множеств.
+
+x\sub{1} <- 1
+x\sub{2} <- 2
+x\sub{3} <- 3
+
+Произвольный член полседовательности отыскивается по формуле
+a\sub{n} = a\sub{1}+(n-1)\*n
+
+Сумма первых N членов арифметической прогресси
+находится по формиле
+S/sub{n} = (a/sub{1}+a/sub{n})/2 \* n
+
+Геометричкой прогрессией называют числовую последовательность
+a1, a2, a3...an и так далее, в которой каждой член получается
+умножением предидущего на число Q, которое называется знаминателем
+прогрессии
+
+Произвольный член геометрической прогесси отыскивается по формуле
+a\sub{n} = a\sub{n-1} \* q
+
+Sn = (a\sub{1} / q-1) * (q\sup{n}-1)
+
+Пусть числовая последовательность задаётся с помощью
+её общего члена
+Xn = 1/n
+
+X = {1, 1/2, 1/3, 1/4}
+
+- Если все члены последовательности равным между собой, то
+она называется постоянной
+
+Последовательность Xn называется возрастающей, если
+каждый следующий её член больше предидущего
+Xkn > Xk
+
+Последовательность Xn называется убиывающей, если
+каждый следующий её член меньше предидущего
+Xkn > Xk
+
+Последовательность называется неубывающей, если Xkn >= Xk
+Последовательность называется невозрастающей, если Xkm <= Xk
+
+Последовательность Xn называется ограниченной сверху, если
+существует такое X, что все члены последовательности будут меньше X
+
+Последовательность Xn называется ограниченной снизу, если
+существует такое X, что все члены последовательности будут больше X
+
+Последовательность называется ограниченной сверху (снизу), если
+все её члены меньше (больше) некоторого числа
+
+Последовательность называется ограниченной, если все члены
+последовательности меньше какого-то числа Xn по абсолютному значению
+
+Все члены огрнаиченной последователнсти Xn по абсолютной величине меньше
+некоторого числа
+
+${Xn}$ ограниченна, если $\exists A > 0$, $|x\sub{n}| < A$
+$\forall n \in N$
+
+Последовательность ${1/n} ограниченна сверху и снизу
+
+## Понятие о функции
+
+Функции в математике - способ выражения зависимости одних переменных
+велечин от других
+
+Функция одной переменной задана, если некоторому числа из {A} по
+некоторму правилу ставится элемент из {B}
+Тогда говорят что функция задана на {A}, и оно является её определением,
+а {B} является её значением
+$x \in A$
+$y \in B$
+
+y = f(x)
+
+Числовую поселдовательность так же можно рассматривать как функцию.
+
+Переменную, принимающую значения членов числовой последовательности,
+можно рассматривать как функцию.
+Каждому элементу множества N (натур. чисел), по некоторому
+правилу, выраженному формулой общего члена, ставится в соотвествтие
+действительное или комплексное число $x_n$
+$n \in R$, или $n \in N$
+А значением функции может являтся любое число
+
+Независимая переменная X называется аргументом
+А y - функция аргумента X, или функция одной независимой переменной
+
+График функции одной переменной является её геометричским образом
+
+### Функция двух независимых перемен
+
+Если каждой упорядоченной паре чисел ${x,y} \in A$ соответствует
+$z(x,y) \in B$
+
+примером упорядоченной пары чисел может служить абсциса и ордината
+точки на декартовой плоскости.
+
+Z = f(x,y)
+
+Геометрическим образом двух переменных является некоторая поверхность
+в трхёмерном пространстве
+{A} - множесво парных значений
+
+Область определения данной функции является D(f(x,y))
+
+### Неявный способ задания функции одной переменной
+
+Если правило, по которому каждому значению X из области определения функции
+f(x) ставится Y в области значений функции, и это правило известно
+и записывается f(x), то такое задание называется явным
+
+$y=x^2 + 2x - 1$
+
+$$x^2 + 2x + 1 - y = n$$
+пример неявного задания
+
+Но если $x^2 + xy + y^2 + 1 =0$, то выразить значение y нельзя
+y = y(x)
+
+Иногда такое правило в явном виде не сформулированно, но известно что
+переменная Y является функцией аргумента X. Так же заданно соотношение
+вида $F(x,y) = 0$, $y = y(x)$. Тогда говорят что функция y(x) заданна
+неявно.
+
+работать с неявной функцией можно работать не выражая её - например найти производную
+
+Функция так же может задаваться параметрически, т.е. через вспомогательную
+переменную - параметр. Параметр обычно обозначается t, для параметрического
+задания функции нужно знать, в каких пределах изменяется значение этого
+параметра. пусть $\alpha =< t =< \beta$
+
+{x = y(t)
+{y = y(y)
+
+Функцию, значения которой получаются из значений x и других постоянных
+велечин, с помощью четырёх действий арифметики, и придельных
+переходов называют аналитически представимой или изобразимой.
+В частности все элементарные функции все элементарные функции
+являются изобразимыми
+
+Основные элементарные функции:
+
+- $y = x$
+- $y = x^n$ (степенная)
+- $y = a^x$ (показательная)
+- $y = log_a(x)$ (логарифмическая)
+- геометрические:
+  - $y = sin(x)$
+  - $y = cos(x)$
+  - $y = tg(x)$
+  - $y = sec(x)$
+  - $y = cosec(x)$
+  - $y = arccos(x)$
+  - $y = arctg(x)$
+  - $y = arcctg(x)$
+
+$ sec = 1/cos(x) $
+$ cosec x = 1/sin(x)$
+
+Функции, задающиеся одной формулой посредством конечного числа
+арифметических действий над элементарными функциями, а так же
+сложные функции получающиеся с помощью композиции элементарных
+функций так же являются элементарными функциями.
+
+$y = f(x)$
+
+$ x \in A$
+$ u \in B$
+$ y \in C$
+
+$y = g(u) = g(f(x))$
+
+Тогда можно говорить что на множестве A заданна сложная функция,
+являющаяся композицией двух функций $y=g(u)$ $u=f(x)$.
+
+Сложная функция может являеться композицией и большего числа функций.
+$y = sin^e\*(x)$
+
+Кроме аналитического существуют и другие способы задания функций, например
+графические.
+
+Область определения функции может рассматриваться как совокупность тех
+значений независимой переменной Х, при которой данная функция имеет смысл.
+
+Чётная функция может являться такой, если значения функции зеркальны от нуля.
+Функция y=f(x) называется чётной или не чётной, если она определенна на множестве,
+симмитричным относительно нулевой точки и при этом $f(-x)=f(x)$ (чётная),
+f(-x)=-f(x). Функцию не обладающей свойством чётности можно назвать
+функцией общего вида.
+
+График чётной функции симметричен относительно оси X, а график нечётной
+симметричен относительно начала координат.
+
+Произведение двух чётных функций есть чётная функция.
+Произведение двух нечётных функций есть чётная функцая.
+Произведений нечётной и чётной будет есть нечётная функция.
+
+#### Понятие монотонности для функции
+
+Функция y=f(x) называется возрастающей на множестве A, если для любых
+x_1 и x_2 x_2 меньше x_2
+
+$$ \forall x_1, x_2 \in A$$
+$$x_1\<x_2=>f(x_1)\<f(x_2)$$
+
+Неубывающая
+$$ \forall x_1, x_2 \in A$$
+$$x_1\>x_2=>f(x_1)\>=f(x_2)$$
+
+[Тут будут графики убывающей и невозрастающей, возсрастающей и неубывающей]
+
+Невозрастающая
+$$ \forall x_1, x_2 \in A$$
+$$x_1\>x_2=>f(x_1)\<=f(x_2)$$
+
+Все эти виды функций называются монотонными функциями
+
+Ограниченная функция
+Функция называется ограниченной если множество её
+значений ограниченно
+
+$$y=f(x)  \exists M > 0:$$
+$$\forall x \in A$$
+$$|f(x)|<=M$$
+
+Примеры ограниченных функций:
+
+- y = sin(x)
+- y = cos(x)
+
+График такой функции полностью лежит на горизонтальной полосе [1,-1]
+
+Функция тангенса ограниченной не является.
+Такие функции являются периодическими
+
+Функия y=f(x) называется периодической, если существует такое
+число T, что для любого x из области определения
+
+$$\exists T: \forall x \in D(f)
+$$f(x)=f(x+kT), k \subset Z$$
+
+Пусть на множестве A заданна функция y=f(x), строго монотонная в своей
+области определения A. Тогда различным значениям y соответсвуют различные
+значения y.
+
+Возьмём элемент y из мнж. B, и поставим ему в соответсвие именно тот элемент x из
+мнж A, которму этот y соответствовал когда задаваласть функция.
+Тем самым на мнж. B будет заданна функция x=g(y), которую
+мы будет называть обратной функцией g(y)=$f^-1(x)$.
+Эту функцию g(y) будем называть обратной по отношению к фунеции f(x)
+
+$y=x^3$
+$g=y^-3
+
+Для того, чтобы найти функцию, обратную данной достаточно разрешить
+уравнение y=f(x) относительно x. Получим функцию x=g(y).
+Затем следует поменять местами x и y. Приняв обычные для аргумента
+и функции обозначения.
+
+#### Свойства обратной функции
+
+1. Областью определения обратной функции становится область значений исходной
+функции. И наоборот областью значений обратной функции будет область
+значения исходной.
+2. Если f(x) возрастающая (убываюшая), то и обратная к ней функция
+будет возсрастающей (убывающей)
+3. f(g(y)) = y, g(f(x)) = x
+
+[Графики показательной и логарифмической функции]
+$y=e^x$ и $y=log(x)$ на одной плоскости, с биссектрисой между ними
+в док-во симметричности двух функций.
+
+- Число a, называется пределом величины x, если абсолютное значние
+разности |x_n-a|, для всех значний x_n, следующих за некоторым
+значением x_0 будет меньше любого, заранее данного положительного числа
+$\epsilon$, как бы мало оно не было.
+
+[График описанного выше]
+
+Т.е с определённого момента, когда $x_n$ попадает область $a+\epsilon$ $a-\epsilon$,
+все остальные значение так же попадут в неё.
+
+Число a является пределом числовой последовательности если для
+любой окрестности U(a), существует такое число $N \in R$, зависищее от
+окрестности U(a), что для всякого n>N, $x_n \in U(a)$.
+
+Другими словами число а называется пределом последовательности x_n, если
+какую бы мы не построили окрестность $\epsilon$ точки а, все члены
+последовательности начиная с некоторого номера попадут в эту окрестность.
+
+$$ a = \lim\limits_{n \to \infty}{x_n} \quad <=> \quad \forall \quad \epsilon > 0
+\exists N \in R, N(\epsilon): |x_n-a|< \epsilon \forall n > N $$
+
+Пример: Рассмотри пос-ть 1/n
+Доказать что предел данной последовательности равен нулю.
+
+Выберем произвольное $\epsilon > 0$
+Выяснить для каких членов последовательности выполняется неравенство
+$\forall n > N$
+Найти $n_0$ для выбранного $\epsilon$, он должен быть целым и положительным.
+$\epsilon=[1/2], и тогда для всех чисел будет выполнятся неравнтсво
+
+
+Рассмотрим последовательность ${x_n}={n-1/n}
+
+Доказать что предел равен 1
+
+1. Выбрать $\epsilon > 0$ ($ ] \epsilon > 0)
+2. Для каких членов последовательности выполняется $|x_n-a|<\epsilon,
+x_n = (n-1)/n, a=1
+3. $|(n-1)/n - 1| < \epsilon$
+=> n>1/n
+И для всех номеров что больш 1/n это будет выполнятся.
+
+- Последовательность имееющая конечный предел называется
+сходящейся. Если число a является пределом последовательности
+то можно сказать что последовательность сходится к числу a.
+
+- Расходящейся называется последовательность, предел который является
+бесконечность или не имеющей предела.
+
+(Отрицание к определению предела)
+Число а не является пределом последовательности тогда и только тогда,
+когда для любого натурального $n_0$ найдётся такое $N>n_0$, что
+|$x_n$-a| >= $\epsilon$.
+В приведённом примере можно взять любое число a, принадлежащее отрезку [-1,1]
+и доказать что оно будет удволетворять последнему удтверждению.
+
+(Ещё одно отрицание)
+Число а не является пределом последовательности тогда и только тогда, когда
+существует такая $\epsilon$ окрестность в точке а, что любого $n_0$, найдётся
+такое n, >= $n_0$, что последующей элементо последовательности не будет
+принадлежать U(a)
+
+Пример: $${2^(-1)^n}$$
+Доказать что она не имеет предела
+
+2, 1/2, 2, 1/2...
+
+Длина отрезка 1/2 до 2 - 3/2
+
+Построим окрестность в точке, лежащей между точками 1/2, 2. И пусть длинна этой
+окрестности равна 2/3. 3/2 > 2/3, и такая окрестность не может содержать
+точки 1/2 и 2. Будет считать для определённости, что окрестность точки 1/2
+не содержит точку 2. Но $x_n = 2$ при n=[2,4,6...]. Получается что
+все бесконечное число этой последовательности не попадает в окрестность точки а.
+
+Точка а не является пределом согласно данному определению. А поскольку
+точка а произовольная, то последовательность не имеет предела.
+
+### Основные теоремы о пределах
+
+1. Теорема о единственности предела
+2. Об ограниченности последовательности, имеющей предел
+3. О стабилизации знака
+4. О переходе к пределу в неравенстве
+5. О двойном неравенстве (промежуточная последовательность)
+6. О пределе модуля
