лаба 7 яп, файлы по лабам инфы, лекция алгебры +- исправ

--- a/ogu/lectures/algebra/l3.md
+++ b/ogu/lectures/algebra/l3.md
@@ -66,7 +66,7 @@ $$ S_{n} =
 
 6 - Если все элементы главной диагонали равны, то матрица называется скалярной
 
-$$ d_n = d_1_2 = .. d_n_n
+$$ d_{1,1} = d_{2,2} = .. d_{n,n} $$
 
 7 - Если в матрице, относительно главной диагонали все нижние элементы
 равны нулю, то матрица называется верхне диагонального вида
@@ -92,10 +92,10 @@ $$ S_{n} =
 9 - Матрица называется нулевой, если состоит из одних нулей (любой вид матрицы
 и порядок)
 
-10 - Две матрицы равны, если одного и того же порядка, и соответсвующие элементы
+10 - Две матрицы равны, если они одного и того же порядка, и соответсвующие элементы
 у них совпадают
 
-$$ A_m_x_n = B_m_x_n \quad \land \quad (a_i_j)=(a_i_j) $$
+$$ A_{m,n} = B_{m,n} \quad \land \quad (a_{i,j})=(b_{i,j}) $$
 
 11 - Транспонированая матрица B к матрице A.
 
@@ -131,17 +131,17 @@ $$
 2 & 5 \\
 3 & 4 \\
 0 & 1
-\end{pmatrix} \quad +
+\end{pmatrix} +
 \begin{pmatrix}
 -7 &  8 \\
 9  & -6 \\
 -4 & -5
-\end{pmatrix} \quad =
+\end{pmatrix} =
 \begin{pmatrix}
 -5 & 12 \\
 12 & -1 \\
 -4 & -4
-\end{pmatrix} \quad +
+\end{pmatrix}
 $$
 
 ### 2. Умножение
@@ -153,7 +153,7 @@ $$
 2 & 5 \\
 3 & 4 \\
 0 & 1
-\end{pmatrix} \quad =
+\end{pmatrix} =
 \begin{pmatrix}
 4 & 10 \\
 6 & 8 \\
@@ -172,11 +172,11 @@ $$ A-B =  A+(-1)B $$
 Две матрицы можно умножить, если количество столбцов равно количеству
 строк во второй матрице
 
-$$ A_{m,n} * B_{p,q} = L_{m,q} = (l_{i,j})$$
+$$ A_{m,n} * B_{p,q} = L_{n,q} = (l_{i,j})$$
 
 Если n = p
 
-$$ B_{p,q} * A_{m,n} = T_{p,n} = (l_{i,j})$$
+$$ B_{p,q} * A_{m,n} = T_{q,m} = (l_{i,j})$$
 
 [ЗАПИСАТЬ УМНОЖЕНИЕ ИЗ ПРИМЕРА В ТЕТРАДИ]
 
@@ -184,27 +184,26 @@ $$ B_{p,q} * A_{m,n} = T_{p,n} = (l_{i,j})$$
 столбцы. Находят сумму парных произведений
 
 **Определение**: В матрице произведения L(T) эелемент $l_{i,j}$ ($t_{i,j}$)
-равен сумме произведений (сумме парных произведений) равен i-той строки в
+равен сумме произведений (сумме парных произведений) i-той строки в
 матрице A(B) на j-ый столбец B(A)
 
 В множестве матриц **НЕ** выполняется условие коммутативности
 
-$$A \* B = C$$
-$$B \* A = D$$
+$$A * B = C$$
+$$B * A = D$$
 
 Относительно сложения выполнеяется условие коммутативности
 
 1. $ A + B = B + A $
 2. $ A + (B + C) = (A + B) + C $
 3. $ A + 0 = A $
-4. $ k(\alpha\*A)=(k\*\alpha)A $
+4. $ k(\alpha * A)=(k * \alpha)A $
 5. $ (k\alpha)A = kA + \alpha A $
 6. $ k(A+B) = kA + kB $
 7. $ (AB)C = A(BC) $
-8. $ A(B+C) = AB+AC, \quad
-(B+C)A = BA+CA $
-9. $ A_n\*E_n = A_n
-10. (A\*B)\sup(T) = B\sup(T)\*A\sup(T)
+8. $ A(B+C) = AB+AC, \quad (B+C)A = BA+CA $
+9. $ A_n * E_n = A_n $
+10. $ (A * B)\sup(T) = B\sup(T) * A\sup(T) $
 
 ---
 **Определение**: В матрице элемент называется крайним, если левее него ничего нет,
